--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascript Calculator</title>
+    <title>Javascript Calculator v2.0</title>
     <link rel="stylesheet" href="design.css" />
   </head>
   <body>
